--- a/components/checkbox/style/component.scss
+++ b/components/checkbox/style/component.scss
@@ -1,17 +1,12 @@
 @include b(checkbox-group) {
   display: inline-block;
-
   label {
     margin-right: 16px;
   }
 }
 
-
-
 /* 一般状态 */
 @include b(checkbox) {
-  $name:selector-append($--namespace, $--block-separator + 'checkbox');
-
   display: inline-block;
   position: relative;
   padding-right: $base-padding-xs;
@@ -21,57 +16,62 @@
   outline: none;
   cursor: pointer;
 
- 
-
   /* 选中状态 */
   &-checked {
-    .#{$name}__inner {
-      border-color: $base-theme-info;
-      background-color: $base-theme-info;
+    @include b(checkbox) {
+      &__inner {
+        border-color: $base-theme-info;
+        background-color: $base-theme-info;
 
-      &:after {
-        transform: rotate(45deg) scale(1);
-        transition: all .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
+        &:after {
+          transform: rotate(45deg) scale(1);
+          transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+        }
       }
     }
   }
 
   /* 未全部选中状态 */
   &-indeterminate {
-    .#{$name}__inner {
-      border-color: #bcbcbc;
-      background-color: $base-color-white;
+    @include b(checkbox) {
+      &__inner {
+        border-color: #bcbcbc;
+        background-color: $base-color-white;
 
-      &:after {
-        transform: rotate(90deg) translate(2px,1px);
-        width: 6px;
-        height: 6px;
-        border: 0px;
-        background-color: $base-theme-info;
+        &:after {
+          transform: rotate(90deg) translate(2px, 1px);
+          width: 6px;
+          height: 6px;
+          border: 0px;
+          background-color: $base-theme-info;
+        }
       }
     }
   }
 
   /* 禁用状态 */
-  &-wrapper-disabled,&-disabled {
-    color:rgba(0,0,0,0.25);
+  &-wrapper-disabled,
+  &-disabled {
+    color: rgba(0, 0, 0, 0.25);
     cursor: not-allowed;
-    .#{$name}__inner {
-      border-color: #d9d9d9;
-      background-color: #f3f3f3;
-      cursor: not-allowed;
-  
-      &:after {
-        border-color: #ccc;
+    @include b(checkbox) {
+      &__inner {
+        border-color: #d9d9d9;
+        background-color: #f3f3f3;
+        cursor: not-allowed;
+
+        &:after {
+          border-color: #ccc;
+        }
       }
     }
-    
   }
-  
 
   &:not(&-disabled):hover {
-    .#{$name}__inner {
-      border-color: $base-theme-info;
+    @include b(checkbox) {
+      &__inner {
+        border-color: $base-theme-info;
+      }
     }
   }
 
@@ -82,10 +82,11 @@
     display: inline-block;
     width: 14px;
     height: 14px;
-    border: 1px solid rgba(188,188,188,1);
+    border: 1px solid rgba(188, 188, 188, 1);
     border-radius: 2px;
     background-color: #fff;
-    transition: border-color .1s cubic-bezier(.71, -0.46, .29, 1.46), background-color .1s cubic-bezier(.71, -0.46, .29, 1.46);
+    transition: border-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46),
+      background-color 0.1s cubic-bezier(0.71, -0.46, 0.29, 1.46);
 
     &:after {
       transform: rotate(45deg) scale(0);
@@ -98,8 +99,8 @@
       border: 2px solid #fff;
       border-top: 0;
       border-left: 0;
-      content: ' ';
-      transition: all .1s cubic-bezier(.71, -0.46, .88, .6);
+      content: " ";
+      transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6);
     }
   }
 
@@ -112,5 +113,8 @@
   & + span {
     padding-right: 5px;
     padding-left: 5px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular;
+    font-weight: 400;
   }
 }
