feat: update tag
tag add shape props, remove focus/active/disabled props

--- a/components/tag/style/component.scss
+++ b/components/tag/style/component.scss
@@ -1,107 +1,219 @@
-@mixin tag-theme($color, $background) {
-  $active-background: darken($background, 10%);
-
-  background-color: $background;
-  color: $color;
-
-  &.disabled,
-  &:disabled {
-    cursor: not-allowed;
-
-    &:focus,
-    &.focus {
-      background-color: $background;
-    }
-
-    &:hover {
-      background-color: $background;
-    }
-
-    .ui-icon {
-      cursor: not-allowed;
-    }
-  }
+@import '../../style/themes/variable';
+@import '../../style/core/index';
+@import 'mixins';
+:root {
+    --tag-height-large: 32px;
+    --tag-height-middle: 28px;
+    --tag-height-small: 24px;
+    --tag-height-xsmall: 20px;
+    --tag-padding-h-large: 16px;
+    --tag-padding-h: 12px;
+    --tag-font-size: 12px;
+    --tag-icon-size-large: 14px;
+    --tag-icon-size: 12px;
+    --tag-icon-size-xsmall: 10px;
+    --tag-color-diabled: #CCCCCC;
+    --tag-default-background: var(--color-text-inverse);
+    --tag-default-color: #616161;
+    --tag-default-border: var(--border-color);
+    --tag-primary-color: var(--theme-primary);
+    --tag-success-color: var(--theme-success);
+    --tag-warning-color: var(--theme-warning);
+    --tag-danger-color: var(--theme-danger);
 }
 
-@mixin tag-size($height, $padding, $paddingRight, $font-size, $border-radius) {
-  padding: $padding;
-  font-size: $font-size;
-  height: $height - 2;
-  line-height: $height - 2;
+$tag-default-color: #616161;
+$tag-default-bg: #f9f9f9;
+$tag-default-border: #CECECE;
+$tag-font-size: var(--tag-font-size);
+@mixin tag-theme($color) {
+    // $active-background: darken($background, 10%);
+    background: rgba($color, 1);
+    border-color: rgba($color, 0.3);
+    color: $color;
+    // &.disabled,
+    // &:disabled {
+    //     cursor: not-allowed;
+    //     &:focus,
+    //     &.focus {
+    //         background-color: $background;
+    //     }
+    //     &:hover {
+    //         background-color: $background;
+    //     }
+    //     .ui-icon {
+    //         cursor: not-allowed;
+    //     }
+    // }
+}
 
-  &.hasCloseButton {
-    padding-right: $paddingRight;
-  }
+@mixin tag-size($height, $padding, $icon-size) {
+    padding: 0 $padding;
+    font-size: $tag-font-size;
+    height: $height;
+    line-height: $height;
+    // border-radius: $height;
+    height: $height;
+    @include b(icon) {
+        font-size: $icon-size;
+    }
+}
 
-  &.radius {
-    border-radius: $border-radius;
-  }
-
-  &.round {
-    border-radius: 1000px;
-  }
-
-  .ui-icon + span,
-  span + .ui-icon {
+@mixin tag-base {
+    display: inline-block;
+    position: relative;
+    transition: all .3s cubic-bezier(.78, .14, .15, .86);
+    vertical-align: middle;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: center;
+    font-size: $tag-font-size;
+    border-width: 1px;
+    border-style: solid;
+    background-color: rgba(var(--tag-default-color), 0.71);
+    border-color: rgba(var(--tag-default-color), 0.3);
+    color: var(--tag-default-color);
+    margin: 0 8px 8px 0;
     cursor: pointer;
-    margin-left: $height / 10;
-  }
 }
 
-.ui-tag {
-  @include tag-size($base-height, 0 10px, 20px, $base-fontSize, $base-radius);
-
-  display: inline-block;
-  position: relative;
-  text-overflow: ellipsis;
-  transition: all .3s cubic-bezier(.78, .14, .15, .86);
-  vertical-align: middle;
-  overflow: hidden;
-  white-space: nowrap;
-
-  /* disabled Tag */
-  &.disabled,
-  &:disabled {
-    cursor: not-allowed;
-    opacity: .65;
-    box-shadow: none;
-  }
-
-  /* Tag sizes */
-  &.size-xl {
-    @include tag-size($base-height-xl, 0 14px, 24px, $base-fontSize-xl, $base-radius-xl);
-  }
-
-  &.size-lg {
-    @include tag-size($base-height-lg, 0 12px, 22px, $base-fontSize-lg, $base-radius-lg);
-  }
-
-  &.size-sm {
-    @include tag-size($base-height-sm, 0 8px, 20px, $base-fontSize-sm, $base-radius-sm);
-  }
-
-  &.size-xs {
-    @include tag-size($base-height-xs, 0 4px, 16px, $base-fontSize-xs, $base-radius-xs);
-  }
-
-  /* Tag themes */
-  &.theme-default {
-    @include tag-theme($base-tag-default-color, $base-tag-default-bg);
-  }
-
-  &.theme-info {
-    @include tag-theme($base-tag-info-color, $base-tag-info-bg);
-  }
-
-  &.theme-success {
-    @include tag-theme($base-tag-success-color, $base-tag-success-bg);
-  }
-
-  &.theme-warning {
-    @include tag-theme($base-tag-warning-color, $base-tag-warning-bg);
-  }
-
-  &.theme-error {
-    @include tag-theme($base-tag-error-color, $base-tag-error-bg);
-  }
+// @mixin tag-size($height, $padding, $paddingRight, $font-size, $border-radius) {
+//     padding: $padding;
+//     font-size: $font-size;
+//     height: $height - 2;
+//     line-height: $height - 2;
+//     border-radius: $height / 2;
+//     &.hasCloseButton {
+//         padding-right: $paddingRight;
+//     }
+//     // &.radius {
+//     // }
+//     &.round {
+//         border-radius: 1000px;
+//     }
+//     .ui-icon+span,
+//     span+.ui-icon {
+//         cursor: pointer;
+//         margin-left: $height / 10;
+//     }
+// }
+@include b(tag) {
+    display: inline-block;
+    position: relative;
+    transition: all .3s cubic-bezier(.78, .14, .15, .86);
+    vertical-align: middle;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: center;
+    font-size: $tag-font-size;
+    border-width: 1px;
+    border-style: solid;
+    background-color: $tag-default-bg;
+    border-color: $tag-default-border;
+    color: $tag-default-color;
+    margin: 0 8px 8px 0;
+    border-radius: 4px;
+    cursor: pointer;
+    &--rect {
+        border-radius: 0px;
+    }
+    &--round {
+        border-radius: var(--tag-height-large);
+    }
+    /* tag sizes: default middle */
+    @include tag-size(var(--tag-height-middle), var(--tag-padding-h), var(--tag-icon-size));
+    @include m(large) {
+        @include tag-size(var(--tag-height-large), var(--tag-padding-h-large), var(--tag-icon-size-large));
+    }
+    @include m(small) {
+        @include tag-size(var(--tag-height-small), var(--tag-padding-h), var(--tag-icon-size));
+    }
+    @include m(xsmall) {
+        @include tag-size(var(--tag-height-xsmall), var(--tag-padding-h), var(--tag-icon-size-xsmall));
+    }
+    /* tag theme */
+    @include m(checked) {
+        background-color: var(--tag-default-color);
+        border-color: var(--tag-default-color);
+        color: var(--tag-default-background);
+    }
+    @include m(primary) {
+        @include tag-theme(var(--tag-primary-color));
+        @include m(checked) {
+            background-color: var(--tag-primary-color);
+            border-color: var(--tag-primary-color);
+            color: var(--tag-default-background);
+        }
+    }
+    @include m(success) {
+        @include tag-theme( var(--tag-success-color));
+        @include m(checked) {
+            background-color: var(--tag-success-color);
+            border-color: var(--tag-success-color);
+            color: var(--tag-default-background);
+        }
+    }
+    @include m(warning) {
+        @include tag-theme(var(--tag-warning-color));
+        @include m(checked) {
+            background-color: var(--tag-warning-color);
+            border-color: var(--tag-warning-color);
+            color: var(--tag-default-background);
+        }
+    }
+    @include m(danger) {
+        @include tag-theme(var(--tag-danger-color));
+        @include m(checked) {
+            background-color: var(--tag-danger-color);
+            border-color: var(--tag-danger-color);
+            color: var(--tag-default-background);
+        }
+    }
 }
+
+// .ui-tag {
+//     @include tag-size($base-height, 0 10px, 20px, $base-fontSize, $base-radius);
+//     display: inline-block;
+//     position: relative;
+//     text-overflow: ellipsis;
+//     transition: all .3s cubic-bezier(.78, .14, .15, .86);
+//     vertical-align: middle;
+//     overflow: hidden;
+//     white-space: nowrap;
+//     /* disabled Tag */
+//     &.disabled,
+//     &:disabled {
+//         cursor: not-allowed;
+//         opacity: .65;
+//         box-shadow: none;
+//     }
+//     /* Tag sizes */
+//     &.size-xl {
+//         @include tag-size($base-height-xl, 0 14px, 24px, $base-fontSize-xl, $base-height-xl / 2);
+//     }
+//     &.size-lg {
+//         @include tag-size($base-height-lg, 0 12px, 22px, $base-fontSize-lg, $base-height-lg / 2);
+//     }
+//     &.size-sm {
+//         @include tag-size($base-height-sm, 0 8px, 20px, $base-fontSize-sm, $base-height-sm / 2);
+//     }
+//     &.size-xs {
+//         @include tag-size($base-height-xs, 0 4px, 16px, $base-fontSize-xs, $base-height-xs / 2);
+//     }
+//     /* Tag themes */
+//     &.theme-default {
+//         @include tag-theme($base-tag-default-color, $base-tag-default-bg);
+//     }
+//     &.theme-info {
+//         @include tag-theme($base-tag-info-color, $base-tag-info-bg);
+//     }
+//     &.theme-success {
+//         @include tag-theme($base-tag-success-color, $base-tag-success-bg);
+//     }
+//     &.theme-warning {
+//         @include tag-theme($base-tag-warning-color, $base-tag-warning-bg);
+//     }
+//     &.theme-error {
+//         @include tag-theme($base-tag-error-color, $base-tag-error-bg);
+//     }
+// }
