--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -56,3 +56,14 @@
 .ui-modal-body-overflow {
   overflow-y: hidden;
 }
+
+.modal-alert-icon {
+  vertical-align: middle;
+  font-size: 22px;
+}
+
+.modal-alert-icon-text {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
